@@ -19,7 +19,7 @@
 //    along with Liberal Crime Squad; if not, write to the Free Software				//
 //    Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA			//
 //////////////////////////////////////////////////////////////////////////////////////////
-
+#include "compat.h"
 #define PICMAX 1000
 
 struct filelistst
