@@ -3,6 +3,7 @@ ChangeLog for Version 3.11.4:
 2007-12-14   Chris Johnson   <grundee@users.sourceforge.net>
 * configure.ac: Added sizeof checks for data types.
 * compat.h: Added typedefs for integer sizes using new sizeof macros.
+* cursesmovie.h, cursesgraphics.h, lcsio.h: Included compat.h.
 
 2007-07-12   Jonathan Stickles   <jonathansfox@users.sourceforge.net>
 * fight.cpp, monthly.cpp: Added more places where Wisdom is used.
